jsonschemadsl2ecore.trafo.opt/test/test39/invalidtests/example4.test39
{
	"family":{
		"personalInfo":{
			 "name":"john",
			"surname":"doe"
		},
		"professionalInfo":{
			"job":"engineer",
			"level":1
		}
	}
}